--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  mobx:
+  flutter_mobx:
   flutter:
     sdk: flutter
 
@@ -38,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  mobx_codegen:
+  build_runner:
   flutter_test:
     sdk: flutter
 
